--- a/CaseStudy1.Rmd
+++ b/CaseStudy1.Rmd
@@ -24,7 +24,17 @@ The report is structured as follows: Section 2 covers the statistical analysis p
 
 2.1 Data Processing
 
+2.1.1 Methods
 
+The first step of our analysis was to examine the dataset and understand the characteristics and distributions of each variable. We reviewed all variables and determined their type (numerical or categorical) and identified any outliers or irregularities. 
+
+2.1.2 Analysis
+
+
+
+2.1.3 Conclusion
+
+We concluded that the dataset does not qualify as a simple random sample because of the method in which it was collected. In order to qualify as a simple random sample, every pregnant women would need to have had an equal chance of being selected. However, in this dataset the pregnant women selected were limited to a certain time frame (1960-1967) and were limited to a specific health plan. Therefore, this dataset does not qualify as a simple random sample. This means that the dataset is not representative of the entire population and the results of the analysis cannot be generalized.
 
 ### 2.2 Birth Weight Distributions
 
