--- a/CaseStudy1.Rmd
+++ b/CaseStudy1.Rmd
@@ -33,9 +33,11 @@ The first step of our analysis was to examine the dataset and understand the cha
 
 While looking at the histograms, we noticed that some of the data in the dataset were outside of a reasonable range for those variables. Some women had listed gestation periods of up to 1000 days while others were described as over 8 feet or up to 1000 pounds. So, while cleaning the dataset, we removed these outliers to complete the analysis without them.
 
+
 2.1.3 Conclusion
 
 We concluded that the dataset does not qualify as a simple random sample because of the method in which it was collected. In order to qualify as a simple random sample, every pregnant women would need to have had an equal chance of being selected. However, in this dataset the pregnant women selected were limited to a certain time frame (1960-1967) and were limited to a specific health plan in a single region. Therefore, this dataset does not qualify as a simple random sample. This means that the dataset is not representative of the entire population and the results of the analysis cannot be generalized.
+
 
 2.2 Birth Weight Distributions
 
@@ -43,13 +45,39 @@ We concluded that the dataset does not qualify as a simple random sample because
 
 Now that we had examined the dataset and each variable as a whole, we looked at the two distributions of birth weights for babies born to women who smoked during their pregnancy and for babies born to women who did not smoke during their pregnancy. Summarizing these distributions numerically, we calculated the minimum, maximum, mean, median, standard deviation, and quartile values.  
 
+
 2.2.2 Analysis
 
+We found that the numerical summaries were as follows:
+
+Minimum birth weight among smokers: 58 oz
+Minimum birth weight among non-smokers: 55 oz
+
+Maximum birth weight among smokers: 163 oz
+Maximum birth weight among non-smokers: 176 oz
+
+Mean birth weight among smokers: 114.1095 oz
+Mean birth weight among non-smokers: 123.0472 oz
+
+Median birth weight among smokers: 115 oz
+Median birth weight among non-smokers: 123 oz
+
+Standard deviation among smokers: 18.0989 oz
+Standard deviation among non-smokers: 17.3987 oz
+
+Q1 birth weight among smokers: 102 oz
+Q1 birth weight among non-smokers: 113 oz
+
+Q3 birth weight among smokers: 126 oz
+Q3 birth weight among non-smokers: 134 oz
+
+Most of these numerical summaries show that the birth weights of babies of mothers who are non-smokers are larger than the birth weights of babies of mothers who are smokers.
 
 
 2.2.3 Conclusion
 
 We found that the mean and median birth weights of the smokers were 114.1095 and 115 respectively while the mean and median birth weights of the non-smokers were 123.0472 and 123 respectively. Since the means and medians of the two distributions were very similar, we can infer that the shapes of the two distributions are almost symmetrical.
+
 
 ### 2.3 Graphical Analysis
 
