--- a/CaseStudy1.Rmd
+++ b/CaseStudy1.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "Maternal Smoking and Infant Death Statistical Analysis"
 date: "2024-10-13"
-author: "Sophia Vo, Katelyn Zhao"
 output: pdf_document
 ---
 
@@ -10,27 +9,27 @@ knitr::opts_chunk$set(echo = TRUE)
 babies <- read.table("babies.txt", header = TRUE, sep="")
 ```
 
-1. Introduction
+# 1. Introduction
 
-This report aims to present the results of a statistical analysis done on the differences in weight between babies born to mothers who smoked during pregnancy and those who did not. 
+This report investigates the potential differences in birth weight between babies born to mothers who smoked during pregnancy and those who did not. Epidemiological research has consistently linked smoking during pregnancy to low birth weights and preterm birth. Birth weight is an indicator of a newborn's health, with lower birth weights associated with an increased risk of infant mortality. This study seeks to quantify the effects of maternal smoking on infant health through statistical analysis using data from the Child Health and Development Studies (CHDS) dataset. 
 
-Our analysis aims to answer the question:  Is there a significant difference in birth weight between babies born to women who smoked and those who did not? Using numerical, graphical, and incidence comparison approaches to answering this question, we found that [our results].
+The CHDS dataset includes data on 1236 babies, all male, who were born between 1960 and 1967 to mothers enrolled in the Kaiser Health Plan in Oakland, California. Each baby was a single birth and survived for at least 28 days after birth. Variables in the dataset include birth weight, length of gestation, whether or not this was the mother's first pregnancy, mother's age, mother's height, mother's weight, and whether or not the mother was a smoker. 
 
-The dataset used for this analysis contains information from 1236 babies; all male, single births, and lived up to 28 days. Variables in the dataset include birth weight, length of gestation, whether or not this was the mother's first pregnancy, mother's age, mother's height, mother's weight, and whether or not the mother was a smoker. 
+The primary objective is to answer the question: Is there a statistically significant difference in birth weights between babies born to mothers who smoked during pregnancy and those who did not? Specifically, we will explore the distribution of birth weights for both smokers and non-smokers, the incidence of low birth weight (under 100 ounces) in both groups, the potential variability in these comparisons based on different statistical methods. Using numerical, graphical, and incidence comparison approaches to answering this question, we found that [our results].
 
-The report is structured as follows: Section 2 covers the statistical analysis processes and results and Section 3 discusses the conclusions and implications of the results.
+The report is structured as follows: Section 1 addresses each of the research questions outlined above, focusing on the numerical, graphical, and incidence comparisons between the smoking and non-smoking groups; Section 2 covers the statistical analysis processes and results; Section 3 expands the analysis by examining other variables that may impact birth weight; and Section 3 discusses the conclusions and implications of the results. Overall, this report will determine whether the difference in weight between babies born to mothers who smoked during pregnancy and those who did not is significant for the health of the baby.
 
 
-2. Analysis
+# 2. Analysis
 
->2.1. Data Processing
+## 2.1. Data Processing
 
->>2.1.1. Methods
+### 2.1.1. Methods
 
 >>The first step of our analysis was to examine the dataset and understand the characteristics and distributions of each variable. We reviewed all variables and determined their type (numerical or categorical) and identified any outliers or irregularities. To do this, we looked at the distributions of each variable graphically using a histogram.
 
 
->>2.1.2. Analysis
+### 2.1.2. Analysis
 
 ```{r, echo=FALSE, fig.width=3, fig.height=2.5}
 hist(babies$bwt, 
@@ -96,19 +95,19 @@ hist(cleaned_df$smoke,
 
 
 
->>2.1.3. Conclusion
+### 2.1.3. Conclusion
 
 >>We concluded that the dataset does not qualify as a simple random sample because of the method in which it was collected. In order to qualify as a simple random sample, every pregnant women would need to have had an equal chance of being selected. However, in this dataset the pregnant women selected were limited to a certain time frame (1960-1967) and were limited to a specific health plan in a single region. Therefore, this dataset does not qualify as a simple random sample. This means that the dataset is not representative of the entire population and the results of the analysis cannot be generalized.
 
 
->2.2. Numerical Analysis of Birth Weight Distributions
+## 2.2. Numerical Analysis of Birth Weight Distributions
 
->> 2.2.1. Methods
+### 2.2.1. Methods
 
 >>Now that we had examined the dataset and each variable as a whole, we looked at the two distributions of birth weights for babies born to women who smoked during their pregnancy and for babies born to women who did not smoke during their pregnancy. Summarizing these distributions numerically, we calculated the minimum, maximum, mean, median, standard deviation, and quartile values.  
 
 
->>2.2.2. Analysis
+### 2.2.2. Analysis
 
 >>We found that the numerical summaries were as follows:
 
@@ -129,18 +128,18 @@ kable(numerical_summaries, caption = "Numerical Differences in Distributions of 
 >>Most of these numerical summaries show that the birth weights of babies of mothers who are non-smokers are larger than the birth weights of babies of mothers who are smokers. To determine whether or not those differences are significant would require further analysis.
 
 
->>2.2.3. Conclusion
+### 2.2.3. Conclusion
 
 >>We found that the mean and median birth weights of the smokers were 114.1095 and 115 respectively while the mean and median birth weights of the non-smokers were 123.0472 and 123 respectively. Since the means and medians of the two distributions were very similar, we can infer that the shapes of the two distributions are almost symmetrical.
 
 
->2.3. Graphical Analysis of Birth Weight Distributions
+## 2.3. Graphical Analysis of Birth Weight Distributions
 
->>2.3.1. Methods
+### 2.3.1. Methods
 
 >>Now that we've summarized the two distributions numerically, we also want to look at them graphically. 
 
->>2.3.2. Analysis
+### 2.3.2. Analysis
 
 >>We plotted two graphs, one with the birth weight distribution of women who are non-smokers and another with the birth weight distribution of women who are smokers. We then layered the two histograms for direct comparison.
 
@@ -173,17 +172,17 @@ legend(150, 0.025,
 ```
 
 
->>2.3.3. Conclusion
+### 2.3.3. Conclusion
 
 >>Based on the layering of the two distributions, the distribution of the baby weights of the mothers who are smokers is shifted to the left of the the distribution of the baby weights of the mothers who are non-smokers. This shows that overall, the baby weights of mothers who are smokers is less than the baby weights of mothers who are non-smokers. To determine whether or not this amount is significant, further analysis would need to be done.
 
->2.4. Incidence Analysis of Low Birth Weights
+## 2.4. Incidence Analysis of Low Birth Weights
 
->>2.4.1. Methods
+### 2.4.1. Methods
 
 >>Now that we've done both numerical and graphical analysis, we want to use one final comparison approach: incidence comparison. Using 100 ounces as the threshold of a low-weight baby, we found the percentages of babies that weigh under that threshold for both smoking and non-smoking mothers. We then adjusted the threshold to observe any changes in the incidences of low-weight births.
 
->>2.4.2. Analysis
+### 2.4.2. Analysis
 
 >>We found that the percentages of low-weight babies are as follows:
 
@@ -237,16 +236,16 @@ legend("topright", legend = c("Smoker", "Non-smoker"),
 
 ```
 
->>2.4.3. Conclusion
+### 2.4.3. Conclusion
 
 >>As shown in the graph above, the incidences of low-weight babies in smoking mothers is greater than the incidences of low-weight babies in non-smoking mothers when the threshold for low-weight babies is between 70 and 120. Outside of that range, the results are flipped.
 
->2.5 Comparative Analysis of Various Analysis Types
+## 2.5 Comparative Analysis of Various Analysis Types
 
->>Numerical Analysis
+### Numerical Analysis
 
->>Graphical Analysis
+### Graphical Analysis
 
->>Incidence Analysis
+### Incidence Analysis
 
-3. Discussion
+# 3. Discussion
